Added more css to fix numbering issues
git-svn-id: https://plugins.svn.wordpress.org/because/trunk@1000853 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/public/assets/css/public.css
+++ b/public/assets/css/public.css
@@ -388,6 +388,11 @@ ol, ol ol, ol ol ol, ul, ul ul, ul ul ul, ul ol, ol ul, ol ol ul, ol ul ol, ol u
 }
 
 
+ol li
+{
+	list-style-type: none!important;
+}
+
 .comment-body
 {
 	border-bottom: 1px solid #ccc;
