minor css changes and updated the default text in the comment box
git-svn-id: https://plugins.svn.wordpress.org/because/trunk@1021051 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/public/assets/css/public.css
+++ b/public/assets/css/public.css
@@ -26,6 +26,20 @@
 	background-color:transparent !important;
 	
 }
+
+#answer_1_wrapper.answer_divs .answer_image{
+	background-color: #1b7eab;
+}
+
+#answer_2_wrapper.answer_divs .answer_image{
+	background-color: #1CB049;
+}
+
+.answer_divs .answer_image{
+	border:5px solid #c1c1c1;
+}
+
+
 #answer_1_wrapper.answer_divs:focus .answer_image,
 #answer_1_wrapper.answer_divs:HOVER .answer_image{
 	border:5px solid #1e8cbe;
